# simpel_fastapi_firsttry

./: pyproject.toml
bsdc/: main.py
bsdc/db/: __init__.py  models.py
bsdc/routers/: __init__.py
tests/: conftest.py
