[tool.black]
line-length = 79

[tool.poetry]
name = "bsdc"
version = "0.1.0"
description = ""
authors = ["Ann Peeters"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hypercorn = "^0.14.1"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.40"
pytest = "^7.1.3"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"